test/src/e2e_vm_tests/test_programs/should_fail/recover_class_as_struct/src/main.sw
contract;

class Foo {
}

fn bar() -> bool {
    0 // recovery witness
}
